@@ -21,6 +21,7 @@ import net.minecraft.world.entity.player.Inventory;
 
 import java.awt.*;
 import java.util.Arrays;
+import java.util.List;
 
 public class ParadoxMachineScreen extends BaseMachineScreen<ParadoxMachineContainer> {
     protected static final ResourceLocation PARADOXBAR = JustDireThings.id("textures/gui/paradoxbar.png");
@@ -67,6 +68,7 @@ public class ParadoxMachineScreen extends BaseMachineScreen<ParadoxMachineContai
 
     public void addTargetButton() {
         addRenderableWidget(ToggleButtonFactory.PARADOXTARGETBUTTON(getGuiLeft() + 56, topSectionTop + 38, targetType, b -> {
+            ((ToggleButton)b).nextTexturePosition();
             targetType = ((ToggleButton) b).getTexturePosition();
             saveSettings();
         }));
@@ -113,7 +115,7 @@ public class ParadoxMachineScreen extends BaseMachineScreen<ParadoxMachineContai
             if (MiscTools.inBounds(topSectionLeft + topSectionWidth - 18 - 5, topSectionTop + 5, 18, 72, pX, pY)) {
                 String energyFormatted = String.format("%.2f", paradoxMachineBE.paradoxEnergy);
 
-                pGuiGraphics.renderTooltip(font, Language.getInstance().getVisualOrder(Arrays.asList(
+                pGuiGraphics.renderTooltip(font, Language.getInstance().getVisualOrder(List.of(
                         Component.translatable("justdirethings.paradoxenergy", energyFormatted, paradoxMachineBE.getMaxParadoxEnergy())
                 )), pX, pY);
             }
@@ -122,19 +124,19 @@ public class ParadoxMachineScreen extends BaseMachineScreen<ParadoxMachineContai
 
     @Override
     public void powerBarTooltip(GuiGraphics pGuiGraphics, int pX, int pY) {
-        if (baseMachineBE instanceof ParadoxMachineBE paradoxMachineBE && baseMachineBE instanceof PoweredMachineBE poweredMachineBE) {
+        if (baseMachineBE instanceof ParadoxMachineBE paradoxMachineBE) {
             if (MiscTools.inBounds(topSectionLeft + 5, topSectionTop + 5, 18, 72, pX, pY)) {
                 int totalBlocks = paradoxMachineBE.testRestoreBlocks().size();
                 int totalEntities = paradoxMachineBE.getEntitiesFromNBT().size();
                 int totalCostEnergy = paradoxMachineBE.getEnergyCost(totalBlocks, totalEntities);
                 if (hasShiftDown())
                     pGuiGraphics.renderTooltip(font, Language.getInstance().getVisualOrder(Arrays.asList(
-                            Component.translatable("justdirethings.screen.energy", MagicHelpers.formatted(this.container.getEnergy()), MagicHelpers.formatted(poweredMachineBE.getMaxEnergy())),
+                            Component.translatable("justdirethings.screen.energy", MagicHelpers.formatted(this.container.getEnergy()), MagicHelpers.formatted(paradoxMachineBE.getMaxEnergy())),
                             Component.translatable("justdirethings.screen.paradoxenergycost", MagicHelpers.formatted(totalCostEnergy))
                     )), pX, pY);
                 else
                     pGuiGraphics.renderTooltip(font, Language.getInstance().getVisualOrder(Arrays.asList(
-                            Component.translatable("justdirethings.screen.energy", MagicHelpers.withSuffix(this.container.getEnergy()), MagicHelpers.withSuffix(poweredMachineBE.getMaxEnergy())),
+                            Component.translatable("justdirethings.screen.energy", MagicHelpers.withSuffix(this.container.getEnergy()), MagicHelpers.withSuffix(paradoxMachineBE.getMaxEnergy())),
                             Component.translatable("justdirethings.screen.paradoxenergycost", MagicHelpers.withSuffix(totalCostEnergy))
                     )), pX, pY);
             }
@@ -143,19 +145,19 @@ public class ParadoxMachineScreen extends BaseMachineScreen<ParadoxMachineContai
 
     @Override
     public void fluidBarTooltip(GuiGraphics pGuiGraphics, int pX, int pY) {
-        if (baseMachineBE instanceof ParadoxMachineBE paradoxMachineBE && baseMachineBE instanceof FluidMachineBE fluidMachineBE) {
+        if (baseMachineBE instanceof ParadoxMachineBE paradoxMachineBE) {
             if (MiscTools.inBounds(topSectionLeft + getFluidBarOffset(), topSectionTop + 5, 18, 72, pX, pY)) {
                 int totalBlocks = paradoxMachineBE.testRestoreBlocks().size();
                 int totalEntities = paradoxMachineBE.getEntitiesFromNBT().size();
                 int totalCostFluid = paradoxMachineBE.getFluidCost(totalBlocks, totalEntities);
                 if (hasShiftDown())
                     pGuiGraphics.renderTooltip(font, Language.getInstance().getVisualOrder(Arrays.asList(
-                            Component.translatable("justdirethings.screen.fluid", this.container.getFluidStack().getDisplayName(), MagicHelpers.formatted(this.container.getFluidAmount()), MagicHelpers.formatted(fluidMachineBE.getMaxMB())),
+                            Component.translatable("justdirethings.screen.fluid", this.container.getFluidStack().getDisplayName(), MagicHelpers.formatted(this.container.getFluidAmount()), MagicHelpers.formatted(paradoxMachineBE.getMaxMB())),
                             Component.translatable("justdirethings.screen.paradoxfluidcost", MagicHelpers.formatted(totalCostFluid))
                     )), pX, pY);
                 else
                     pGuiGraphics.renderTooltip(font, Language.getInstance().getVisualOrder(Arrays.asList(
-                            Component.translatable("justdirethings.screen.fluid", this.container.getFluidStack().getDisplayName(), MagicHelpers.withSuffix(this.container.getFluidAmount()), MagicHelpers.withSuffix(fluidMachineBE.getMaxMB())),
+                            Component.translatable("justdirethings.screen.fluid", this.container.getFluidStack().getDisplayName(), MagicHelpers.withSuffix(this.container.getFluidAmount()), MagicHelpers.withSuffix(paradoxMachineBE.getMaxMB())),
                             Component.translatable("justdirethings.screen.paradoxfluidcost", MagicHelpers.withSuffix(totalCostFluid))
                     )), pX, pY);
             }
